Issue920 (#921)
* Issue 920: Update to Java 10

* Update Travis to JDK 10